--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,22 @@
-<h1> Lasagna bolognesa</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lasagna Recipe</title>
+</head>
+<body>
+    
+    <h1> Lasagna bolognesa</h1>
+    <img src="https://www.simplyrecipes.com/thmb/8a3cEQI5NL4dCdKGXObxg1PwrtU=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2006__09__lasagna-bolognese-horiz-a-1800-707bce0d9020428a9a8cbc51b19d33b4.jpg" alt="lasagna image">
+
+    <h3>Description:</h3>
+    <p><strong>Start by preparing the meat sauce. In a large skillet, sauté finely chopped onions and garlic in olive oil until golden brown. Add ground beef and cook until browned.</strong> Stir in crushed tomatoes, tomato paste, basil, oregano, salt, and pepper. Simmer the sauce for about 30 minutes to let the flavors meld.</p>
+
+    <!-- paragraphs will break, added strong and em to refer to important items within the paragraphs.-->
+
+    <p>Now, it's time to assemble. In a baking dish, layer the meat sauce, lasagna noodles, and cheese mixture. Repeat until you've used up all your ingredients, finishing with a generous layer of cheese on top. Bake in the oven until the cheese is melted and bubbly, and the edges are golden brown. Let it rest for a few minutes before slicing into the perfect, gooey, and flavorful lasagna layers. <strong>Enjoy!</strong></p>
+
+
+</body>
+</html>
