--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -17,6 +17,23 @@
 
     <p>Now, it's time to assemble. In a baking dish, layer the meat sauce, lasagna noodles, and cheese mixture. Repeat until you've used up all your ingredients, finishing with a generous layer of cheese on top. Bake in the oven until the cheese is melted and bubbly, and the edges are golden brown. Let it rest for a few minutes before slicing into the perfect, gooey, and flavorful lasagna layers. <strong>Enjoy!</strong></p>
 
+    <h3> Ingredients</h3>
+    <ul>
+        <li>Lasagna noodles</li>
+        <li>Olive oil</li>
+        <li>Salt</li>
+        <li>Meat</li>
+        <li>Tomato Sauce</li>
+        <li>Cheese</li>
+    </ul>
 
+    <h3>Steps</h3>
+    <ol>
+        <li>Preheat your oven to 375°F (190°C)</li>
+        <li>Prepare the Meat Sauce</li>
+        <li>Cook the Lasagna Noodles</li>
+        <li>Prepare the Cheese Filling</li>
+        <li>Assemble and bake</li>
+    </ol>
 </body>
 </html>
