--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 <body>
     
     <h1> Lasagna bolognesa</h1>
-    <img src="https://www.simplyrecipes.com/thmb/8a3cEQI5NL4dCdKGXObxg1PwrtU=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2006__09__lasagna-bolognese-horiz-a-1800-707bce0d9020428a9a8cbc51b19d33b4.jpg" alt="lasagna image">
+    <img src="https://www.simplyrecipes.com/thmb/8a3cEQI5NL4dCdKGXObxg1PwrtU=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2006__09__lasagna-bolognese-horiz-a-1800-707bce0d9020428a9a8cbc51b19d33b4.jpg" alt="lasagna image" height="600" width="600">
 
     <h3>Description:</h3>
     <p><strong>Start by preparing the meat sauce. In a large skillet, sauté finely chopped onions and garlic in olive oil until golden brown. Add ground beef and cook until browned.</strong> Stir in crushed tomatoes, tomato paste, basil, oregano, salt, and pepper. Simmer the sauce for about 30 minutes to let the flavors meld.</p>
