--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html"> Lasagna Bolognesa</a>
+    <ol>
+        <li><a href="./recipes/lasagna.html"> Lasagna Bolognesa</a></li>
+        <li><a href="./recipes/pizza.html>"> Pizza </a></li>
+        <li><a href="./recipes/chicken.html">Orange Chicken</a></li>
+    </ol>
 </body>
 </html>
