add stylesheet, ref to html and h1 style

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ol>
-        <li><a href="./recipes/lasagna.html"> Lasagna Bolognesa</a></li>
-        <li><a href="./recipes/pizza.html"> Pizza</a></li>
-        <li><a href="./recipes/chicken.html">Orange Chicken</a></li>
-    </ol>
+    <div>
+        <h1 class="heading1">Odin Recipes</h1>
+        <ol>
+            <li><a href="./recipes/lasagna.html"> Lasagna Bolognesa</a></li>
+            <li><a href="./recipes/pizza.html"> Pizza</a></li>
+            <li><a href="./recipes/chicken.html">Orange Chicken</a></li>
+        </ol>
+    </div>
 </body>
 </html>
