add styles to ol and div

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div>
+    <div class="div1">
         <h1 class="heading1">Odin Recipes</h1>
-        <ol>
+        <ol class="olRecipes">
             <li><a href="./recipes/lasagna.html"> Lasagna Bolognesa</a></li>
             <li><a href="./recipes/pizza.html"> Pizza</a></li>
             <li><a href="./recipes/chicken.html">Orange Chicken</a></li>
