--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orange chicken recipe</title>
+    <link rel="stylesheet" type="text/css" href="../styles.css">
 </head>
 <body>
     <a href="../index.html">Go back</a>
