add goBack font

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body class="recipesBody">
     <div class="lasagnaDiv">
-        <a href="../index.html">Go back</a>
+        <a class="goBack" href="../index.html">Go back</a>
         <h1> Lasagna bolognesa</h1>
         <img class="recipeImg" src="https://www.simplyrecipes.com/thmb/8a3cEQI5NL4dCdKGXObxg1PwrtU=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2006__09__lasagna-bolognese-horiz-a-1800-707bce0d9020428a9a8cbc51b19d33b4.jpg" alt="lasagna image" height="600" width="600">
 
